src/objects/FSTR__PCE_Step_Checklist_Item__c.object
<CustomObject>
    <description>Defines checklist items used to create the Checklists attached to created Task and Custom Object records.</description>
    <fields>
        <fullName>FSTR__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Step__c</fullName>
        <inlineHelpText>The step associated with this checklist.</inlineHelpText>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Step Checklist Items</relationshipLabel>
        <relationshipName>PCE_Step_Checklist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSTR__Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Step Checklist Item</label>
    <nameField>
        <displayFormat>T{000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>